gen/GherkinParser.java
// Generated from C:/workspaces/github/ice-parser/src/main/antlr4/com/github/ledoyen/ice/parser\Gherkin.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GherkinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, NL=9, 
		FEATURE_KEYWORD=10, BACKGROUND_KEYWORD=11, SCENARIO_KEYWORD=12, SCENARIO_OUTLINE_KEYWORD=13, 
		STEP_KEYWORD=14, EXAMPLES_KEYWORD=15, SEPARATOR=16, WORD=17, ANY=18, WS=19, 
		LINE_COMMENT=20, SPACE=21;
	public static final int
		RULE_gherkin_document = 0, RULE_feature = 1, RULE_feature_header = 2, 
		RULE_background = 3, RULE_scenario_definition = 4, RULE_scenario = 5, 
		RULE_scenario_outline = 6, RULE_examples_definition = 7, RULE_examples = 8, 
		RULE_examples_table = 9, RULE_document = 10, RULE_step = 11, RULE_step_line = 12, 
		RULE_step_args = 13, RULE_data_table = 14, RULE_doc_string = 15, RULE_language = 16, 
		RULE_tags = 17, RULE_tag_line = 18, RULE_comment = 19, RULE_feature_line = 20, 
		RULE_background_line = 21, RULE_scenario_line = 22, RULE_scenario_outline_line = 23, 
		RULE_examples_line = 24, RULE_description_helper = 25, RULE_description = 26, 
		RULE_table_row = 27, RULE_cell = 28, RULE_cell_value = 29, RULE_line_to_eol = 30;
	public static final String[] ruleNames = {
		"gherkin_document", "feature", "feature_header", "background", "scenario_definition", 
		"scenario", "scenario_outline", "examples_definition", "examples", "examples_table", 
		"document", "step", "step_line", "step_args", "data_table", "doc_string", 
		"language", "tags", "tag_line", "comment", "feature_line", "background_line", 
		"scenario_line", "scenario_outline_line", "examples_line", "description_helper", 
		"description", "table_row", "cell", "cell_value", "line_to_eol"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "' '", "'#'", "'language'", "':'", "'@'", "'\r'", "'\n'", "'|'", 
		null, "'Feature'", "'Background'", "'Scenario'", "'Scenario Outline'", 
		null, "'Examples'", "'''''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, "NL", "FEATURE_KEYWORD", 
		"BACKGROUND_KEYWORD", "SCENARIO_KEYWORD", "SCENARIO_OUTLINE_KEYWORD", 
		"STEP_KEYWORD", "EXAMPLES_KEYWORD", "SEPARATOR", "WORD", "ANY", "WS", 
		"LINE_COMMENT", "SPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gherkin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GherkinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Gherkin_documentContext extends ParserRuleContext {
		public FeatureContext feature() {
			return getRuleContext(FeatureContext.class,0);
		}
		public Gherkin_documentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gherkin_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterGherkin_document(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitGherkin_document(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitGherkin_document(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Gherkin_documentContext gherkin_document() throws RecognitionException {
		Gherkin_documentContext _localctx = new Gherkin_documentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_gherkin_document);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			feature();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public Feature_headerContext feature_header() {
			return getRuleContext(Feature_headerContext.class,0);
		}
		public BackgroundContext background() {
			return getRuleContext(BackgroundContext.class,0);
		}
		public List<Scenario_definitionContext> scenario_definition() {
			return getRuleContexts(Scenario_definitionContext.class);
		}
		public Scenario_definitionContext scenario_definition(int i) {
			return getRuleContext(Scenario_definitionContext.class,i);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterFeature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitFeature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitFeature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_feature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			feature_header();
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BACKGROUND_KEYWORD) {
				{
				setState(65);
				background();
				}
			}

			setState(69); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				scenario_definition();
				}
				}
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << SCENARIO_KEYWORD) | (1L << SCENARIO_OUTLINE_KEYWORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Feature_headerContext extends ParserRuleContext {
		public Feature_lineContext feature_line() {
			return getRuleContext(Feature_lineContext.class,0);
		}
		public Description_helperContext description_helper() {
			return getRuleContext(Description_helperContext.class,0);
		}
		public LanguageContext language() {
			return getRuleContext(LanguageContext.class,0);
		}
		public TagsContext tags() {
			return getRuleContext(TagsContext.class,0);
		}
		public Feature_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterFeature_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitFeature_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitFeature_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Feature_headerContext feature_header() throws RecognitionException {
		Feature_headerContext _localctx = new Feature_headerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0 || _la==T__1) {
				{
				setState(73);
				language();
				}
			}

			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(76);
				tags();
				}
			}

			setState(79);
			feature_line();
			setState(80);
			description_helper();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BackgroundContext extends ParserRuleContext {
		public Background_lineContext background_line() {
			return getRuleContext(Background_lineContext.class,0);
		}
		public Description_helperContext description_helper() {
			return getRuleContext(Description_helperContext.class,0);
		}
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public BackgroundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_background; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterBackground(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitBackground(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitBackground(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BackgroundContext background() throws RecognitionException {
		BackgroundContext _localctx = new BackgroundContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_background);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			background_line();
			setState(83);
			description_helper();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STEP_KEYWORD || _la==LINE_COMMENT) {
				{
				{
				setState(84);
				step();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Scenario_definitionContext extends ParserRuleContext {
		public ScenarioContext scenario() {
			return getRuleContext(ScenarioContext.class,0);
		}
		public Scenario_outlineContext scenario_outline() {
			return getRuleContext(Scenario_outlineContext.class,0);
		}
		public TagsContext tags() {
			return getRuleContext(TagsContext.class,0);
		}
		public Scenario_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterScenario_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitScenario_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitScenario_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Scenario_definitionContext scenario_definition() throws RecognitionException {
		Scenario_definitionContext _localctx = new Scenario_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scenario_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(90);
				tags();
				}
			}

			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SCENARIO_KEYWORD:
				{
				setState(93);
				scenario();
				}
				break;
			case SCENARIO_OUTLINE_KEYWORD:
				{
				setState(94);
				scenario_outline();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScenarioContext extends ParserRuleContext {
		public Scenario_lineContext scenario_line() {
			return getRuleContext(Scenario_lineContext.class,0);
		}
		public Description_helperContext description_helper() {
			return getRuleContext(Description_helperContext.class,0);
		}
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public ScenarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterScenario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitScenario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitScenario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScenarioContext scenario() throws RecognitionException {
		ScenarioContext _localctx = new ScenarioContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_scenario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			scenario_line();
			setState(98);
			description_helper();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STEP_KEYWORD || _la==LINE_COMMENT) {
				{
				{
				setState(99);
				step();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Scenario_outlineContext extends ParserRuleContext {
		public Scenario_outline_lineContext scenario_outline_line() {
			return getRuleContext(Scenario_outline_lineContext.class,0);
		}
		public Description_helperContext description_helper() {
			return getRuleContext(Description_helperContext.class,0);
		}
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public List<Examples_definitionContext> examples_definition() {
			return getRuleContexts(Examples_definitionContext.class);
		}
		public Examples_definitionContext examples_definition(int i) {
			return getRuleContext(Examples_definitionContext.class,i);
		}
		public Scenario_outlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario_outline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterScenario_outline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitScenario_outline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitScenario_outline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Scenario_outlineContext scenario_outline() throws RecognitionException {
		Scenario_outlineContext _localctx = new Scenario_outlineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_scenario_outline);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			scenario_outline_line();
			setState(106);
			description_helper();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STEP_KEYWORD || _la==LINE_COMMENT) {
				{
				{
				setState(107);
				step();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(113);
					examples_definition();
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Examples_definitionContext extends ParserRuleContext {
		public ExamplesContext examples() {
			return getRuleContext(ExamplesContext.class,0);
		}
		public TagsContext tags() {
			return getRuleContext(TagsContext.class,0);
		}
		public Examples_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_examples_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterExamples_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitExamples_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitExamples_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Examples_definitionContext examples_definition() throws RecognitionException {
		Examples_definitionContext _localctx = new Examples_definitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_examples_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(119);
				tags();
				}
			}

			setState(122);
			examples();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExamplesContext extends ParserRuleContext {
		public Examples_lineContext examples_line() {
			return getRuleContext(Examples_lineContext.class,0);
		}
		public Description_helperContext description_helper() {
			return getRuleContext(Description_helperContext.class,0);
		}
		public Examples_tableContext examples_table() {
			return getRuleContext(Examples_tableContext.class,0);
		}
		public ExamplesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_examples; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterExamples(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitExamples(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitExamples(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExamplesContext examples() throws RecognitionException {
		ExamplesContext _localctx = new ExamplesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_examples);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			examples_line();
			setState(125);
			description_helper();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(126);
				examples_table();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Examples_tableContext extends ParserRuleContext {
		public List<Table_rowContext> table_row() {
			return getRuleContexts(Table_rowContext.class);
		}
		public Table_rowContext table_row(int i) {
			return getRuleContext(Table_rowContext.class,i);
		}
		public Examples_tableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_examples_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterExamples_table(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitExamples_table(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitExamples_table(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Examples_tableContext examples_table() throws RecognitionException {
		Examples_tableContext _localctx = new Examples_tableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_examples_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			table_row();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(130);
				table_row();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentContext extends ParserRuleContext {
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}
		public StepContext step(int i) {
			return getRuleContext(StepContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STEP_KEYWORD || _la==LINE_COMMENT) {
				{
				{
				setState(136);
				step();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepContext extends ParserRuleContext {
		public Step_lineContext step_line() {
			return getRuleContext(Step_lineContext.class,0);
		}
		public List<TerminalNode> LINE_COMMENT() { return getTokens(GherkinParser.LINE_COMMENT); }
		public TerminalNode LINE_COMMENT(int i) {
			return getToken(GherkinParser.LINE_COMMENT, i);
		}
		public List<TerminalNode> NL() { return getTokens(GherkinParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GherkinParser.NL, i);
		}
		public Step_argsContext step_args() {
			return getRuleContext(Step_argsContext.class,0);
		}
		public StepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_step; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterStep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitStep(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitStep(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StepContext step() throws RecognitionException {
		StepContext _localctx = new StepContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_step);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LINE_COMMENT) {
				{
				{
				setState(142);
				match(LINE_COMMENT);
				setState(143);
				match(NL);
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			step_line();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7 || _la==SEPARATOR) {
				{
				setState(150);
				step_args();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Step_lineContext extends ParserRuleContext {
		public TerminalNode STEP_KEYWORD() { return getToken(GherkinParser.STEP_KEYWORD, 0); }
		public Line_to_eolContext line_to_eol() {
			return getRuleContext(Line_to_eolContext.class,0);
		}
		public TerminalNode NL() { return getToken(GherkinParser.NL, 0); }
		public List<TerminalNode> SPACE() { return getTokens(GherkinParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(GherkinParser.SPACE, i);
		}
		public Step_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_step_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).enterStep_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GherkinListener ) ((GherkinListener)listener).exitStep_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GherkinVisitor ) return ((GherkinVisitor<? extends T>)visitor).visitStep_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Step_lineContext step_line() throws RecognitionException {
		Step_lineContext _localctx = new Step_lineContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_step_line);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(STEP_KEYWORD);
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(154);
					match(SPACE);
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			setState(160);
			line_to_eol();
			setState(161);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
